--- a/SCA/app/app.csproj
+++ b/SCA/app/app.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -96,6 +97,12 @@
       <Project>{a1e7c2b4-ed12-48d4-b7dd-a6d26de6dd05}</Project>
       <Name>negocio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Iconos\lugar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Iconos\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
