--- a/SCA/negocio/packages.config
+++ b/SCA/negocio/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net481" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net481" />
   <package id="ReaLTaiizor" version="3.8.1.3" targetFramework="net481" />
 </packages>
